fix gap

--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -159,8 +159,8 @@ input {
   }
 
   @media (max-width: em(375)) {
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
 }
 
