--- a/src/scss/components/indexPage/_hero.scss
+++ b/src/scss/components/indexPage/_hero.scss
@@ -53,7 +53,7 @@
       }
 
       @media (max-width: em(575)) {
-        gap: 1rem;
+        gap: 1.5rem;
       }
     }
 
